<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@mipmap/casa"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@mipmap/reporte"
            android:title="@string/reportes" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@mipmap/clientes"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_guias"
            android:icon="@mipmap/corazon"
            android:title="@string/guias" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@mipmap/producto"
            android:title="@string/productos" />
    </group>

</menu>